--- a/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/2장/2.4 Model Selection 모듈 소개.ipynb
+++ b/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/2장/2.4 Model Selection 모듈 소개.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -177,7 +177,7 @@
        "4       0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -290,57 +290,22 @@
       "#1 교차 검증 정확도 :1.0, 학습 데이터 크기: 120, 검증 데이터 크기: 30\n",
       "#1 검증 세트 인덱스:[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
       " 24 25 26 27 28 29]\n",
-      "[ 30  31  32  33  34  35  36  37  38  39  40  41  42  43  44  45  46  47\n",
-      "  48  49  50  51  52  53  54  55  56  57  58  59  60  61  62  63  64  65\n",
-      "  66  67  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82  83\n",
-      "  84  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99 100 101\n",
-      " 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119\n",
-      " 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137\n",
-      " 138 139 140 141 142 143 144 145 146 147 148 149]\n",
       "\n",
       "#2 교차 검증 정확도 :0.9667, 학습 데이터 크기: 120, 검증 데이터 크기: 30\n",
       "#2 검증 세트 인덱스:[30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53\n",
       " 54 55 56 57 58 59]\n",
-      "[  0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17\n",
-      "  18  19  20  21  22  23  24  25  26  27  28  29  60  61  62  63  64  65\n",
-      "  66  67  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82  83\n",
-      "  84  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99 100 101\n",
-      " 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119\n",
-      " 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137\n",
-      " 138 139 140 141 142 143 144 145 146 147 148 149]\n",
       "\n",
       "#3 교차 검증 정확도 :0.8667, 학습 데이터 크기: 120, 검증 데이터 크기: 30\n",
       "#3 검증 세트 인덱스:[60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83\n",
       " 84 85 86 87 88 89]\n",
-      "[  0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17\n",
-      "  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35\n",
-      "  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53\n",
-      "  54  55  56  57  58  59  90  91  92  93  94  95  96  97  98  99 100 101\n",
-      " 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119\n",
-      " 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137\n",
-      " 138 139 140 141 142 143 144 145 146 147 148 149]\n",
       "\n",
       "#4 교차 검증 정확도 :0.9333, 학습 데이터 크기: 120, 검증 데이터 크기: 30\n",
       "#4 검증 세트 인덱스:[ 90  91  92  93  94  95  96  97  98  99 100 101 102 103 104 105 106 107\n",
       " 108 109 110 111 112 113 114 115 116 117 118 119]\n",
-      "[  0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17\n",
-      "  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35\n",
-      "  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53\n",
-      "  54  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71\n",
-      "  72  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89\n",
-      " 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137\n",
-      " 138 139 140 141 142 143 144 145 146 147 148 149]\n",
       "\n",
       "#5 교차 검증 정확도 :0.7333, 학습 데이터 크기: 120, 검증 데이터 크기: 30\n",
       "#5 검증 세트 인덱스:[120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137\n",
       " 138 139 140 141 142 143 144 145 146 147 148 149]\n",
-      "[  0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17\n",
-      "  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35\n",
-      "  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53\n",
-      "  54  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71\n",
-      "  72  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89\n",
-      "  90  91  92  93  94  95  96  97  98  99 100 101 102 103 104 105 106 107\n",
-      " 108 109 110 111 112 113 114 115 116 117 118 119]\n",
       "\n",
       "## 평균 검증 정확도: 0.9\n"
      ]
@@ -384,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +361,7 @@
        "Name: label, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -450,12 +415,12 @@
    ],
    "source": [
     "kfold = KFold(n_splits=3)\n",
-    "# kfold.split(X)는 폴드 세트를 3번 반복할 때마다 달라지는 학습/테스트 용 데이터 로우 인덱스 번호 반환. \n",
+    "# kfold.split(X)는 폴드 세트를 3번 반복할 때마다 달라지는 학습/테스트용 데이터 로우 인덱스 번호 반환. \n",
     "n_iter =0\n",
     "for train_index, test_index  in kfold.split(iris_df):\n",
     "    n_iter += 1\n",
     "    label_train= iris_df['label'].iloc[train_index]\n",
-    "    label_test= iris_df['label'].iloc[test_index]\n",
+    "    label_test= iris_df['label'].iloc[test_index] \n",
     "    print('## 교차 검증: {0}'.format(n_iter))\n",
     "    print('학습 레이블 데이터 분포:\\n', label_train.value_counts())\n",
     "    print('검증 레이블 데이터 분포:\\n', label_test.value_counts())\n",
@@ -464,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -594,14 +559,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.98 0.94 0.98] <class 'numpy.ndarray'>\n",
       "교차 검증별 정확도: [0.98 0.94 0.98]\n",
       "평균 검증 정확도: 0.9667\n"
      ]
@@ -620,7 +584,7 @@
     "label = iris_data.target\n",
     "\n",
     "# 성능 지표는 정확도(accuracy) , 교차 검증 세트는 3개 \n",
-    "scores = cross_val_score(dt_clf , data , label , scoring='accuracy',cv=3)\n",
+    "scores = cross_val_score(dt_clf , data , label , scoring='accuracy',cv=3) # Stratified Fold 사용\n",
     "#print(scores, type(scores))\n",
     "print('교차 검증별 정확도:',np.round(scores, 4))\n",
     "print('평균 검증 정확도:', np.round(np.mean(scores), 4))"
@@ -635,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +729,7 @@
        "5              0.975                1.0               0.95  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,20 +752,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mean_fit_time': array([0.00033339, 0.        , 0.00050179, 0.        , 0.        ,\n",
+       "{'mean_fit_time': array([0.00066694, 0.00100056, 0.        , 0.00033236, 0.00066678,\n",
+       "        0.0006667 ]),\n",
+       " 'std_fit_time': array([4.71596141e-04, 7.86741172e-07, 0.00000000e+00, 4.70021655e-04,\n",
+       "        4.71507862e-04, 4.71426640e-04]),\n",
+       " 'mean_score_time': array([0.00033307, 0.00033387, 0.00100144, 0.00099707, 0.00099436,\n",
        "        0.        ]),\n",
-       " 'std_fit_time': array([0.00047148, 0.        , 0.00040443, 0.        , 0.        ,\n",
-       "        0.        ]),\n",
-       " 'mean_score_time': array([0.00023373, 0.        , 0.        , 0.00016761, 0.        ,\n",
-       "        0.        ]),\n",
-       " 'std_score_time': array([0.00033054, 0.        , 0.        , 0.00023703, 0.        ,\n",
-       "        0.        ]),\n",
+       " 'std_score_time': array([4.71033179e-04, 4.72157095e-04, 1.96925985e-06, 8.57202384e-06,\n",
+       "        5.73967936e-06, 0.00000000e+00]),\n",
        " 'param_max_depth': masked_array(data=[1, 1, 2, 2, 3, 3],\n",
        "              mask=[False, False, False, False, False, False],\n",
        "        fill_value='?',\n",
@@ -833,7 +797,7 @@
        "        1.17851130e-02, 1.17851130e-02])}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -868,17 +832,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "테스트 데이터 세트 정확도: 0.9667\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# GridSearchCV의 refit으로 이미 학습이 된 estimator 반환\n",
     "estimator = grid_dtree.best_estimator_\n",
@@ -898,7 +854,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -912,7 +868,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+   }
   }
  },
  "nbformat": 4,
