--- a/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/2장/2.5 데이터_전처리.ipynb
+++ b/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/2장/2.5 데이터_전처리.ipynb
@@ -4,14 +4,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 데이터 인코딩"
+    "# 데이터 전처리\n",
+    "- 데이터 클린징\n",
+    "- 결손갑 처리(Null/NaN 처리)\n",
+    "- 데이터 인코딩(레이블, 원-핫 인코딩)\n",
+    "  - ML 에서는 문자열을 처리하지 못하므로 숫자값으로 변환해야 함\n",
+    "- 데이터 스케일링\n",
+    "- 이상치 제거\n",
+    "- Feature 선택, 추출 및 가공 - Feature Engineering"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 레이블 인코딩(Label encoding)"
+    "## 데이터 인코딩\n",
+    "머신러닝 알고리즘은 문자열 데이터 속성을 입력 받지 안으며 모든 데이터는 숫자형으로 표현되어야 합니다.\n",
+    "문자형 카테고리형 속성은 모두 숫자값으로 변환/인코딩 되어야 합니다.\n",
+    "\n",
+    "- 레이블(Label) 인코딩\n",
+    "  - 문자열 분류를 숫자형으로 분류\n",
+    "    ex) [TV, 전자레인지, 컴퓨터, 선풍기, 믹서]  ---> [0, 1, 4, 5, 3, 2]\n",
+    "\n",
+    "  -  but, 숫자로 변경했으나 의도하지 않게 숫자의 크기에 따른 순서가 정해져 버림. \n",
+    "  -  어떤 알고리즘은 영향을 받을 수 있음. 그래서 one-hot 인코딩이 나옴\n",
+    "\n",
+    "- 원-핫(One-Hot) 인코딩\n",
+    "  - 원-핫 인코딩은 피처 값의 유형에 따라 새로운 피처를 추가해 고유 값에 해당하는 컬럼만 1을 표시하고 \n",
+    "  \n",
+    "    나머지 컬럼에는 0을 표시하는 방식입니다.\n",
+    "\n",
+    "- 인코딩 적용 방법\n",
+    "  - 레이블 인코딩\n",
+    "    - LabelEncoder 클래스\n",
+    "    - fit() 과 transform() 을 이용하여 변환\n",
+    "  - 원-핫 인코딩\n",
+    "    - OneHotEncoder 클래스\n",
+    "    - fit()과 transform()을 이용하여 변환. 인자로 2차원 ndarray 입력 필요.\n",
+    "\n",
+    "      sparse 배열 형태로 변환되므로 toarray()를 적용하여 다시 Dense 형태로 변환되어야 함.\n",
+    "    - pg.get_dummies(DataFrame)을 이용 - **sk-learn이 번거로워서 pandas를 주로 이용**.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 레이블 인코딩(Label encoding)\n"
    ]
   },
   {
@@ -74,15 +113,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "인코딩 변환값: [0 1 4 5 3 3 2 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fit() 과 transform()을 한번에 수행\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "items=['TV','냉장고','전자렌지','컴퓨터','선풍기','선풍기','믹서','믹서']\n",
+    "\n",
+    "# LabelEncoder를 객체로 생성한 후 , fit( ) 과 transform( ) 으로 label 인코딩 수행. \n",
+    "encoder = LabelEncoder()\n",
+    "labels = encoder.fit_transform(items)\n",
+    "print('인코딩 변환값:',labels)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 원-핫 인코딩(One-Hot encoding)"
+    "### 원-핫 인코딩(One-Hot encoding)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -129,6 +193,63 @@
    "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "원-핫 인코딩 데이터\n",
+      "[[1. 0. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 1.]\n",
+      " [0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0.]]\n",
+      "원-핫 인코딩 데이터 차원\n",
+      "(8, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fit() 과 transform()을 한번에 수행\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "import numpy as np\n",
+    "\n",
+    "items=['TV','냉장고','전자렌지','컴퓨터','선풍기','선풍기','믹서','믹서']\n",
+    "items = np.array(items).reshape(-1, 1)\n",
+    "items\n",
+    "\n",
+    "oh_encoder = OneHotEncoder()\n",
+    "oh_encoder.fit_transform(items)\n",
+    "\n",
+    "# OneHotEncoder로 변환한 결과는 희소행렬(Sparse Matrix)이므로 toarray()를 이용하여 밀집 행렬(Dense Matrix)로 변환. \n",
+    "print('원-핫 인코딩 데이터')\n",
+    "print(oh_labels.toarray())\n",
+    "print('원-핫 인코딩 데이터 차원')\n",
+    "print(oh_labels.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   item\n",
+      "0    TV\n",
+      "1   냉장고\n",
+      "2  전자렌지\n",
+      "3   컴퓨터\n",
+      "4   선풍기\n",
+      "5   선풍기\n",
+      "6    믹서\n",
+      "7    믹서\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -247,7 +368,7 @@
        "7        0         0        1         0          0         0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +377,44 @@
     "import pandas as pd\n",
     "\n",
     "df = pd.DataFrame({'item':['TV','냉장고','전자렌지','컴퓨터','선풍기','선풍기','믹서','믹서'] })\n",
+    "print(df)\n",
     "pd.get_dummies(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 피처 스케일링\n",
+    "- 표준화는 데이터의 피처 각각이 평균이 0이고 분산이 1인 가우시안 정규분포를 가진 값으로 변환하는 것을 의미합니다.\n",
+    "    $$ x_i\\_new = \\frac{x_i - mean(x)}{stdev(x)} $$\n",
+    "\n",
+    "\n",
+    "    - [20, 30, 40] ---> [-1.22, 0, 1.22]\n",
+    "\n",
+    "    - 평균: 30, 표준편차: 8.16\n",
+    "    \n",
+    "    - 데이터 분포의 중심을 0으로(Zero-Centered)\n",
+    "\n",
+    "- 정규화는 서로 다른 피처의 크기를 통일하기 위해 크기를 변환해 주는 개념임.\n",
+    "    $$ x_i\\_new = \\frac{x_i - min(x)}{max(x) - min(x)}, 0 과 1 사이의 값으로 변환$$\n",
+    "\n",
+    "    - [20, 30, 40] ---> [0, 0.5, 1]\n",
+    "\n",
+    "    - 최소값: 20\n",
+    "\n",
+    "    - 최대값 - 최소값: 20 \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 사이킷런 피처 스케일링 지원\n",
+    "- StandardScaler : 평균이 0 이고, 분산이 1 인 정규분포 형태로 변환\n",
+    "- MinMaxScaler : 데이터값을 0과 1사이의 범위 값으로 변환함 (음수 값이 있으면 -1에서 1값으로 변환함)"
    ]
   },
   {
@@ -275,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -345,6 +503,47 @@
     "# StandardScaler 로 데이터 셋 변환. fit( ) 과 transform( ) 호출.  \n",
     "scaler.fit(iris_df)\n",
     "iris_scaled = scaler.transform(iris_df)\n",
+    "\n",
+    "#transform( )시 scale 변환된 데이터 셋이 numpy ndarry로 반환되어 이를 DataFrame으로 변환\n",
+    "iris_df_scaled = pd.DataFrame(data=iris_scaled, columns=iris.feature_names)\n",
+    "print('feature 들의 평균 값')\n",
+    "print(iris_df_scaled.mean())\n",
+    "print('\\nfeature 들의 분산 값')\n",
+    "print(iris_df_scaled.var())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "feature 들의 평균 값\n",
+      "sepal length (cm)   -1.690315e-15\n",
+      "sepal width (cm)    -1.842970e-15\n",
+      "petal length (cm)   -1.698641e-15\n",
+      "petal width (cm)    -1.409243e-15\n",
+      "dtype: float64\n",
+      "\n",
+      "feature 들의 분산 값\n",
+      "sepal length (cm)    1.006711\n",
+      "sepal width (cm)     1.006711\n",
+      "petal length (cm)    1.006711\n",
+      "petal width (cm)     1.006711\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# StandardScaler객체 생성\n",
+    "scaler = StandardScaler()\n",
+    "# StandardScaler 로 데이터 셋 변환. fit( ) 과 transform( ) 호출.  \n",
+    "iris_scaled = scaler.fit_transform(iris_df)\n",
     "\n",
     "#transform( )시 scale 변환된 데이터 셋이 numpy ndarry로 반환되어 이를 DataFrame으로 변환\n",
     "iris_df_scaled = pd.DataFrame(data=iris_scaled, columns=iris.feature_names)\n",
@@ -427,7 +626,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 0],\n",
+       "        [ 1],\n",
+       "        [ 2],\n",
+       "        [ 3],\n",
+       "        [ 4],\n",
+       "        [ 5],\n",
+       "        [ 6],\n",
+       "        [ 7],\n",
+       "        [ 8],\n",
+       "        [ 9],\n",
+       "        [10]]),\n",
+       " array([[0],\n",
+       "        [1],\n",
+       "        [2],\n",
+       "        [3],\n",
+       "        [4],\n",
+       "        [5]]),\n",
+       " (11, 1))"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_array, test_array, train_array.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -470,14 +706,14 @@
     "scaler.fit(test_array)\n",
     "# 1/5 scale로 test_array 데이터 변환함. 원본 5->1로 변환.  \n",
     "test_scaled = scaler.transform(test_array)\n",
-    "# train_array 변환 출력\n",
+    "# test_array 변환 출력\n",
     "print('원본 test_array 데이터:', np.round(test_array.reshape(-1), 2))\n",
     "print('Scale된 test_array 데이터:', np.round(test_scaled.reshape(-1), 2))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -493,6 +729,10 @@
     }
    ],
    "source": [
+    "# train_array 와 test_array 는 동일하게 Scale 되어야 함. fit()는 사용하지 않고 transfrom()만 사용\n",
+    "# fit()을 재사용하면 새롭게 transform 됨\n",
+    "# train 과 test dataset을 함께 scale하는 것이 좋음\n",
+    "\n",
     "scaler = MinMaxScaler()\n",
     "scaler.fit(train_array)\n",
     "train_scaled = scaler.transform(train_array)\n",
@@ -515,7 +755,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -529,7 +769,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+   }
   }
  },
  "nbformat": 4,
